@@ -1,3 +1,8 @@
+2004-02-10  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* events.c (button_press_event): Allow for a drag on the second
+	click of a double click. Fixes bug #133198.
+
 2004-02-02  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* sol.c: Replaced references to g_basename. See bug
